[MOB][DSK] header completed and WMQ settings

--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "framer": "^1.2.6",
     "framer-motion": "^2.6.13",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-ionicons": "^4.2.0",
+    "react-live-clock": "^5.0.16",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
