--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
+    "contentful": "^8.2.1",
     "framer": "^1.2.6",
     "framer-motion": "^2.6.13",
     "moment": "^2.29.1",
