--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-ionicons": "^4.2.0",
     "react-live-clock": "^5.0.16",
     "react-moment": "^1.1.1",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
